--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "mongodb": "^6.4.0",
     "mongoose": "^7.2.0",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
