--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "concurrently": "^8.2.2",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^6.4.0",
     "mongoose": "^7.2.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
     "stripe": "^14.20.0"
   },
   "devDependencies": {
